# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  render.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221208081421_create_subscriptions_table.sql  20221228224038_make_status_not_null_in_subscriptions.sql  20221229081402_create_subscription_tokens_table.sql  20230116143028_seed_user.sql
scripts/: delete_matching_db.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.html  dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  password.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
