[package]
name = "zero2prod"
version = "0.1.0"
authors = ['Alexander Nitiola <cre8tor.alexander@gmail.com>']
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.7"
serde = { version = "1", features = ["derive"]}
config = "0.14"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", # rustls as TLS backend
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]